# pallas-extras

./: '  .gitignore  Cargo.toml  README.md  notes.md
bip32/: Cargo.toml
bip32/benches/: comparison.rs
bip32/src/: lib.rs
cbor-util/: Cargo.toml
cbor-util/src/: array_option.rs  big_int.rs  bool_as_u8.rs  bounded_bytes.rs  boxed_slice.rs  bytes.rs  cbor_encoded.rs  crypto.rs  indefinite.rs  inspect.rs  lib.rs  list_as_map.rs  mitsein.rs  net.rs  option.rs  set.rs  signature.rs  tinycbor.rs  url.rs
cbor-util/src/tinycbor/: bounded_bytes.rs  non_empty.rs
kes/: Cargo.toml  README.md
kes/src/: lib.rs  single_use.rs  sum.rs
kes/src/sum/: compact.rs
ledger/: Cargo.toml  README.md  exp-action.rs  exp-anchor.rs
ledger/duplicate/: Cargo.toml  README.md
ledger/duplicate/src/: lib.rs
ledger/minicbor-derive/: Cargo.toml  README.md  expanded.rs  main.rs
ledger/minicbor-derive/benches/: bench.rs
ledger/minicbor-derive/src/: ast.rs  attrs.rs  blacklist.rs  cbor_len.rs  decode.rs  encode.rs  fields.rs  lib.rs  lifetimes.rs  variants.rs
ledger/minicbor-derive/src/ast/: enumeration.rs  structure.rs
ledger/minicbor-derive/src/attrs/: codec.rs  encoding.rs  idx.rs  typeparam.rs
ledger/minicbor-derive/tests/: arbitrary.rs  bytes.rs  compat.rs  deriving.rs  encoding.rs  enums.rs  length.rs  structs.rs  ui.rs  various.rs
ledger/minicbor-derive/tests/pass/: bytes.rs  enums.rs  structs.rs  various.rs
ledger/sparse-struct/: Cargo.toml
ledger/sparse-struct/src/: lib.rs
ledger/sparse-struct/tests/: ui.rs
ledger/sparse-struct/tests/ui/: struct-variant.stderr  struct.rs  too-many.rs  too-many.stderr  tuple-many-elements.stderr  union.rs  unit-variant.stderr  wrong-attribute.rs  wrong-attribute.stderr  wrong-derive.rs  wrong-derive.stderr
ledger/src/: address.rs  allegra.rs  alonzo.rs  asset.rs  babbage.rs  block.rs  byron.rs  cbor.rs  certificate.rs  conway.rs  credential.rs  crypto.rs  epoch.rs  era.rs  governance.rs  interval.rs  lib.rs  mary.rs  plutus.rs  pool.rs  protocol.rs  script.rs  shelley.rs  slot.rs  transaction.rs  unique.rs  url.rs  witness.rs
ledger/src/address/: byron.rs  shelley.rs
ledger/src/allegra/: block.rs  protocol.rs  script.rs  transaction.rs
ledger/src/allegra/protocol/: version.rs
ledger/src/allegra/transaction/: body.rs  data.rs  witness.rs
ledger/src/alonzo/: block.rs  protocol.rs  script.rs  transaction.rs  update.rs
ledger/src/alonzo/protocol/: version.rs
ledger/src/alonzo/script/: data.rs  execution.rs
ledger/src/alonzo/transaction/: body.rs  data.rs  output.rs  redeemer.rs  witness.rs
ledger/src/babbage/: block.rs  certificate.rs  protocol.rs  script.rs  transaction.rs
ledger/src/babbage/block/: header.rs
ledger/src/babbage/certificate/: operational.rs
ledger/src/babbage/protocol/: version.rs
ledger/src/babbage/script/: cost.rs
ledger/src/babbage/transaction/: body.rs  data.rs  datum.rs  output.rs  witness.rs
ledger/src/block/: header.rs
ledger/src/byron/: address.rs  attributes.rs  block.rs  delegation.rs  protocol.rs  transaction.rs  update.rs
ledger/src/byron/address/: attributes.rs  data.rs  distribution.rs  payload.rs
ledger/src/byron/block/: body.rs  consensus.rs  data.rs  header.rs  main.rs  proof.rs  signature.rs
ledger/src/byron/boundary/: block.rs
ledger/src/byron/delegation/: certificate.rs  signature.rs
ledger/src/byron/protocol/: fee_policy.rs  soft_fork.rs  version.rs
ledger/src/byron/transaction/: fee_policy.rs  input.rs  output.rs  payload.rs  proof.rs  witness.rs
ledger/src/byron/update/: data.rs  proposal.rs  vote.rs
ledger/src/conway/: asset.rs  certificate.rs  epoch.rs  governance.rs  pool.rs  protocol.rs  script.rs  set.rs  slot.rs  transaction.rs  url.rs  witness.rs
ledger/src/conway/asset/: name.rs
ledger/src/governance/: action.rs  delegate_representative.rs  voting.rs
ledger/src/interval/: positive.rs  unit.rs  unsigned.rs
ledger/src/mary/: asset.rs  block.rs  protocol.rs  transaction.rs
ledger/src/script/: native.rs  plutus.rs
ledger/src/shelley/: address.rs  asset.rs  block.rs  ceritificate.rs  certificate.rs  credential.rs  crypto.rs  interval.rs  pool.rs  protocol.rs  script.rs  transaction.rs  unit_interval.rs  update.rs  url.rs
ledger/src/transaction/: id.rs
ledger/tests/: cbor_len.rs  chain.rs  codec.rs
network/: Cargo.toml  README.md
network/src/: agency.rs  chain_sync.rs  encoded.rs  handshake.rs  hard_fork_combinator.rs  lib.rs  main.rs  message.rs  mux.rs  node_to_client.rs  node_to_node.rs  point.rs  protocol.rs  state.rs  tip.rs  traits.rs  typefu.rs  utilities.rs
network/src/handshake/: confirm.rs  propose.rs
network/src/mux/: client.rs  handle.rs  header.rs  reader_task.rs  server.rs  task.rs
network/src/node_to_client/: version_data.rs
network/src/node_to_node/: block_fetch.rs  chain_sync.rs  keep_alive.rs  peer_sharing.rs  tx_submission.rs  version_data.rs
network/src/protocol/: handshake.rs  node_to_client.rs  node_to_node.rs
network/src/traits/: message.rs  mini_protocol.rs  protocol.rs  state.rs
network/src/typefu/: array.rs  constructor.rs  coproduct.rs  fold.rs  hlist.rs  index.rs  map.rs  utilities.rs
network/tests/: duplex.rs  mux.rs
plutus/: Cargo.toml  README.md  coop-1.uplc  coop-1d.uplc  cost-model.rs  output.uplc
plutus/benches/: flamegraph.rs  results.md  validation.rs
plutus/benches/shared/: mod.rs
plutus/fuzz/: Cargo.toml  stability_report.txt
plutus/fuzz/src/: main.rs
plutus/macros/: Cargo.toml
plutus/macros/src/: lib.rs
plutus/src/: builtin.rs  cek.rs  constant.rs  cost.rs  data.rs  evaluate.rs  flat.rs  lex.rs  lib.rs  machine.rs  program.rs
plutus/src/builtin/: array.rs  bls12_381.rs  bytestring.rs  data.rs  digest.rs  ed25519.rs  integer.rs  k256.rs  list.rs  string.rs
plutus/src/constant/: arena.rs
plutus/src/cost/: function.rs  machine.rs
plutus/src/data/: construct.rs
plutus/src/machine/: bvt.rs
plutus/src/program/: evaluate.rs
plutus/tests/: conformance.rs  temp.rs  validation.rs
plutus/tests/conformance/: .last_synced_hash  cost-model.rs  uplc
(+724 files in other folders)
