[workspace]
members = [
  "bip32",
  "bip39",
  "cbor-util",
  "database",
  "kes",
  "ledger",
  #     "network",
  #     "vrf",
  #     "ledger/minicbor-derive",
  #     "ledger/sparse-struct",
  "plutus",
]

# TODO: Figure out features to enable for each dep.
[workspace.dependencies]

# CBOR
cbor-util = { path = "cbor-util" }
tinycbor = "0.5.1"
tinycbor-derive = "0.5.2"

# Crypto Traits
digest = { version = "0.11.0-rc.5", default-features = false }
signature = { version = "3.0.0-rc.6", default-features = false }

# Data types
either = "1.15"
mitsein = "0.8"
rug = { version = "1.28.0", default-features = false, features = [
  "integer",
  "std",
] }

# Hashing
blake2 = { version = "0.11.0-rc.3", default-features = false }
sha2 = { version = "0.11.0-rc.3", default-features = false }
sha3 = { version = "0.11.0-rc.3", default-features = false }

# Public Key Cryptography
curve25519-dalek = { version = "5.0.0-pre.3", default-features = false }
ed25519-dalek = { version = "3.0.0-pre.3", default-features = false }

# Utilities
const-hex = { version = "1" }
macro_rules_attribute = "0.2.2"
rand = "0.9"
ref-cast = "1.0"
thiserror = "2.0"
zerocopy = "0.8"

[package]
edition = "2024"
name = "pallas-extras"
version = "0.1.0"

[dependencies]
