[workspace]
members = [
    "bip32",
    "bip39",
    "cbor-util",
    "database",
    "kes",
    "ledger",
    #    "network",
    #    "vrf",
    "plutus",
]

# TODO: Figure out features to enable for each dep.
[workspace.dependencies]

# CBOR
cbor-util = { path = "cbor-util" }
tinycbor = "0.11.0"
tinycbor-derive = "0.12.0"

# Crypto Traits
digest = { version = "0.11.0-rc.5", default-features = false }
signature = { version = "3.0.0-rc.6", default-features = false }

# Data types
either = "1.15"
mitsein = "0.8"
rug = { version = "1.28.0", default-features = false, features = [
    "integer",
    "std",
] }

# Hashing
blake2 = { version = "0.11.0-rc.3", default-features = false }
sha2 = { version = "0.11.0-rc.3", default-features = false }
sha3 = { version = "0.11.0-rc.3", default-features = false }

# Public Key Cryptography
curve25519-dalek = { version = "5.0.0-pre.6", default-features = false }
ed25519-dalek = { version = "3.0.0-pre.6", default-features = false }
# TODO: remove once ed25519-dalek has a zerocopy feature also that enables this
ed25519 = { version = "3.0.0-rc.4", features = ["zerocopy"] }
hybrid-array = { version = "0.4.7" }

# Utilities
const-hex = { version = "1" }
displaydoc = "0.2"
macro_rules_attribute = "0.2.2"
rand = "0.9"
ref-cast = "1.0"
thiserror = "2.0"
zerocopy = { version = "0.8", features = ["derive"] }

[patch.crates-io]
# TODO: remove once https://github.com/dalek-cryptography/curve25519-dalek/pull/733 is merged
ed25519-dalek = { git = "https://github.com/carloskiki/curve25519-dalek.git" }


[package]
edition = "2024"
name = "pallas-extras"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
ledger = { path = "ledger" }
tinycbor = { workspace = true }
