[package]
name = "bip32"
version = "0.1.0"
edition = "2024"

[dependencies]
zerocopy = { workspace = true }

curve25519-dalek = { workspace = true }
digest = { workspace = true }
sha2 = { workspace = true }
hmac = "0.13.0-rc.3"
pbkdf2 = "0.13.0-rc.5"

[dev-dependencies]
curve25519-dalek = { workspace = true }
ed25519-bip32 = "0.4"
criterion = "0.8"
rand = { workspace = true }

[[bench]]
name = "comparison"
harness = false
