[package]
edition = "2024"
name = "bip32"
version = "0.1.0"

[dependencies]
zerocopy = { workspace = true, features = ["derive"] }

curve25519-dalek = { workspace = true }
digest = { workspace = true }
hmac = "0.13.0-rc.5"
pbkdf2 = "0.13.0-rc.9"
sha2 = { workspace = true }

[dev-dependencies]
criterion = "0.8"
curve25519-dalek = { workspace = true }
ed25519-bip32 = "0.4"
rand = { workspace = true }

[[bench]]
harness = false
name = "comparison"
