[package]
name = "cbor-util"
version = "0.1.0"
edition = "2024"

[dependencies]
signature = { workspace = true }
minicbor = { version = "2.1.3", features = ["full"] }
rug = { workspace = true }

tinycbor = { workspace = true }
ref-cast = { workspace = true }
macro_rules_attribute = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
