[package]
edition = "2024"
name = "cbor-util"
version = "0.1.0"

[dependencies]
minicbor = { version = "2.1.3", features = ["full"] }
rug = { workspace = true }
signature = { workspace = true }

macro_rules_attribute = { workspace = true }
ref-cast = { workspace = true }
thiserror = { workspace = true }
tinycbor = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
