[package]
edition = "2024"
name = "cbor-util"
version = "0.1.0"

[dependencies]
# CBOR
tinycbor = { workspace = true }

# Crypto Traits
signature = { workspace = true }

# Data types
rug = { workspace = true }
mitsein = { workspace = true }

# Public Key Cryptography
bip32 = { path = "../bip32" }
ed25519-dalek = { workspace = true }

# Utilities
macro_rules_attribute = { workspace = true }
ref-cast = { workspace = true }
thiserror = { workspace = true }
zerocopy = { workspace = true }
displaydoc = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
