[package]
edition = "2024"
name = "kes"
version = "0.1.0"

[dependencies]
blake2 = { workspace = true }
digest = { workspace = true }
either = { workspace = true }
signature = { workspace = true, features = ["alloc"] }

ref-cast = { workspace = true }

[dev-dependencies]
ed25519-dalek = { workspace = true }
rand = { workspace = true }
