[package]
edition = "2024"
name = "kes"
version = "0.1.0"

[dependencies]
blake2 = { workspace = true }
digest = { workspace = true, features = ["rand_core", "getrandom"] }
signature = { workspace = true, features = ["alloc"] }

either = "1.15"
ref-cast = { workspace = true }
zerocopy = { workspace = true }

[dev-dependencies]
ed25519-dalek = { workspace = true, features = ["digest", "rand_core"] }
