[package]
name = "ledger"
version = "0.1.0"
edition = "2024"

[dependencies]
# Data types
either = { workspace = true }

# CBOR
tinycbor = { workspace = true }
tinycbor-derive = { workspace = true }
cbor-util = { workspace = true }

# Crypto Traits
digest = { workspace = true }

# Hashing
blake2 = { workspace = true }
sha3 = { workspace = true }
crc32fast = "1.4"

# Public Key Cryptography
kes = { path = "../kes" }
bip32 = { path = "../bip32" }
ed25519-dalek = { workspace = true }


# Utilities
zerocopy = { workspace = true }
bech32 = "0.11"

[dev-dependencies]
anyhow = "1"
const-hex = { workspace = true }
bs58 = "0.5"

[[test]]
name = "codec"

[[test]]
name = "cbor_len"
