[package]
edition = "2024"
name = "ledger"
version = "0.1.0"

[dependencies]
# CBOR
cbor-util = { workspace = true }
tinycbor = { workspace = true }
tinycbor-derive = { workspace = true }

# Crypto Traits
digest = { workspace = true }

# Data types
either = { workspace = true }

# Hashing
blake2 = { workspace = true }
crc32fast = "1.4"
sha3 = { workspace = true }

# Public Key Cryptography
bip32 = { path = "../bip32" }
ed25519-dalek = { workspace = true }
kes = { path = "../kes" }

# Utilities
bech32 = "0.11"
zerocopy = { workspace = true }

[dev-dependencies]
anyhow = "1"
bs58 = "0.5"
const-hex = { workspace = true }

[[test]]
name = "codec"

[[test]]
name = "cbor_len"
