[package]
edition = "2024"
name = "network"
version = "0.1.0"

[dependencies]
cbor-util = { workspace = true }
embedded-io = { workspace = true }
tinycbor = { workspace = true }
tinycbor-derive = { workspace = true }
zerocopy = { workspace = true }

bytes = "1.11.1"
displaydoc = { workspace = true }
ledger = { path = "../ledger" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "io-util", "macros"] }
tokio-stream = { workspace = true }

[[test]]
name = "mux"
