[package]
name = "plutus"
version = "0.1.0"
edition = "2024"


[features]
test = []

[dependencies]
rug = { workspace = true }

sha2 = { workspace = true, features = ["alloc"] }
sha3 = { workspace = true, features = ["alloc"] }
blake2 = { workspace = true }
k256 = "0.14.0-rc.2"
ripemd = "0.2.0-rc.3"

bwst = { git = "https://github.com/carloskiki/bwst.git", tag = "v0.1.5", features = ["alloc"] }
ed25519-dalek = { workspace = true, features = ["alloc"] }

strum = { version = "0.27.2", features = ["derive"] }
macro_rules_attribute = { workspace = true }
thiserror = { workspace = true }
log = "0.4"

const-hex = { workspace = true }

tinycbor = { workspace = true }
tinycbor-derive = { workspace = true }
embedded-io = "0.7.1"
cbor-util = { workspace = true }

[dev-dependencies]
libtest2-mimic = "0.0.4"

[[test]]
name = "conformance"
harness = false
