[package]
edition = "2024"
name = "plutus"
version = "0.1.0"


[features]
test = []

[dependencies]
# Codec
const-hex = { workspace = true }
embedded-io = "0.7"
tinycbor = { workspace = true }

# Data types
ledger = { path = "../ledger" }
rug = { workspace = true }

# Hashing
blake2 = { workspace = true }
k256 = "0.14.0-rc.2"
ripemd = "0.2.0-rc.3"
sha2 = { workspace = true, features = ["alloc"] }
sha3 = { workspace = true, features = ["alloc"] }

# Public Key Cryptography
bwst = { git = "https://github.com/carloskiki/bwst.git", tag = "v0.1.6", features = [
    "alloc",
] }
ed25519-dalek = { workspace = true, features = ["alloc"] }

# Utilities
log = "0.4"
macro_rules_attribute = { workspace = true }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = { workspace = true }
zerocopy = "0.8"

[dev-dependencies]
criterion = { version = "0.8" }
libtest2-mimic = "0.0.4"

[[test]]
harness = false
name = "conformance"

[[bench]]
harness = false
name = "validation"
